--- a/pages/kerla.html
+++ b/pages/kerla.html
@@ -17,7 +17,7 @@
     <a href="rajasthan.html"> RAJASTHAN &nbsp;|</a>   
     <a href="ladakh.html"> LADAKH &nbsp;|</a>
     <a href="kerla.html"> KERLA &nbsp;| </a>
-    <a href="accomodation.html">ACCOMODATION&nbsp;|</a>
+    <a href="hotelbooking.html">HOTEL BOOKING</a>
     <a href="login.html">LOGIN  &nbsp;| </a>
     <a href="contact.html">CONTACT US &nbsp;| </a>
     <hr/>
