--- a/pages/historical-place.html
+++ b/pages/historical-place.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <title> historical Place
@@ -32,7 +32,7 @@
 
 <hr>
     <h1>1.Ajianta &Ellora Caves, Maharashtra :</h1>
-    <img src="C:\Users\Vaishnavi\Desktop\icp-13-html-github-group-project-1-indian-tourism-website\img\Historical-places img\Ajanta & Ellora caves.jpg" height="300px" alt="Ajianta &Ellora Caves, Maharashtra">
+    <img src="./../images/Ajanta & Ellora caves.jpg" height="300px" alt="Ajianta &Ellora Caves, Maharashtra">
     <br>
     <p>The Ajanta and Ellora Caves are two distinct but renowned UNESCO World Heritage Sites located in Maharashtra, India, celebrated for their exquisite rock-cut architecture and ancient art. The Ajanta Caves, primarily Buddhist, are famous for their vibrant mural paintings depicting Buddhist life and Jataka tales, while the Ellora Caves showcase a remarkable blend of Hindu, Buddhist, and Jain art and architecture, including the monolithic Kailasa temple.</p> 
       <b><ul type="disc">
@@ -61,7 +61,7 @@
     </hr>
 <hr>
       <h1>2.Kangra Fort, Himachal Pradesh :</h1>
-    <img src="C:\Users\Vaishnavi\Desktop\demo\image\Kangra Fort, Himachal Pradesh" height="300px" alt="Kangra Fort, Himachal Pradesh">
+    <img src="./../images/Kangra-Fort-3.jpg" height="300px" alt="Kangra Fort, Himachal Pradesh">
     <br>
     <p>The Kangra Fort in Himachal Pradesh, built by the Katoch dynasty, is one of India's oldest and largest forts, tracing its origins to the ancient Trigarta Kingdom mentioned in the Mahabharata. It has a long and storied history, marked by numerous invasions and periods of rule by various dynasties, including the Mughals and the Sikhs, and was significantly damaged by a devastating earthquake in 1905. </p> 
       <b><ul type="disc">
@@ -87,7 +87,7 @@
     </hr>
 <hr>
       <h1>3.Golden Temple, Panjab:</h1>
-    <img src="C:\Users\Vaishnavi\Desktop\icp-13-html-github-group-project-1-indian-tourism-website\img\Historical-places img\Golden-Temple, Panjab.jpg" height="300px" alt="Kangra Fort, Himachal Pradesh">
+    <img src="./../images/Golden-Temple, Panjab.jpg" height="300px" alt="Kangra Fort, Himachal Pradesh">
     <br>
     <p> The history of the Golden Temple, formally known as Sri Harmandir Sahib, in Amritsar, Punjab, spans from its foundation by Guru Ram Das in the 16th century to its eventual gold plating by Maharaja Ranjit Singh. It stands as the holiest shrine in Sikhism, built on principles of equality and accessibility for all.  </p> 
       <b><ul type="disc">
@@ -112,7 +112,7 @@
     </hr>
 <hr>
       <h1>4.Taj Mahal, Uttar Pradesh:</h1>
-    <img src="C:\Users\Vaishnavi\Desktop\icp-13-html-github-group-project-1-indian-tourism-website\img\Historical-places img\Taj-Mahal,Uttar Pradesh.jpg" height="300px" alt="Taj Mahal, Uttar Pradesh">
+    <img src="./../images/Taj-Mahal,Uttar Pradesh.jpg" height="300px" alt="Taj Mahal, Uttar Pradesh">
     <br>  
     <br>
     An ivory-white marble mausoleum commissioned in 1632 by the Mughal emperor Shah Jahan to house the tomb of his favorite wife, Mumtaz Mahal, and is considered a masterpiece of Mughal architecture and a UNESCO World Heritage Site. It is a symbol of love and a testament to the opulence and rich history of the Mughal Empire, featuring a complex with a mosque and guest house within formal gardens.  </p> 
@@ -142,7 +142,7 @@
     <hr>
 
       <h1>5.Kamakhya Temple, Assam :</h1>
-    <img src="C:\Users\Vaishnavi\Desktop\icp-13-html-github-group-project-1-indian-tourism-website\img\Historical-places img\Kamakhya-Temple, Assam.webp" height="300px" alt="Kamakhya Temple, Assam">
+    <img src="./../images/Kamakhya-Temple, Assam.webp" height="300px" alt="Kamakhya Temple, Assam">
     <br>  
     <br>
       The Kamakhya Temple, located in Guwahati, Assam, is a highly revered Hindu shrine dedicated to the goddess Kamakhya, a manifestation of the mother goddess and a prominent Shakti Peetha. It's one of the oldest temples in India and is known for its connection to Tantric practices and the annual Ambubachi Mela, which celebrates the goddess's menstruation.  </p> 
@@ -172,7 +172,7 @@
 
 <hr>
        <h1>6.KonarkSun Temple, Odisa :</h1>
-    <img src="C:\Users\Vaishnavi\Desktop\icp-13-html-github-group-project-1-indian-tourism-website\img\Historical-places img\KonarkSun-Temple, Odisa2.jpg" height="300px" alt="KonarkSun Temple, Odisa">
+    <img src="./../images/KonarkSun-Temple, Odisa2." height="300px" alt="KonarkSun Temple, Odisa">
     <br>  
     <br>
       <p>The Konark Sun Temple in Odisha was constructed in the 13th century, around 1250 CE, by King Narasimhadeva I of the Eastern Ganga Dynasty and is designed in the shape of a colossal chariot dedicated to Surya, the Sun God. This architectural marvel, a UNESCO World Heritage site since 1984, is renowned for its intricate carvings and symbolic representation of the sun god's celestial journey</p> 
@@ -198,13 +198,6 @@
       </li>
    </ul>
   </hr>
-
-
-
-
-
-      
-
       
                 </body> 
                 </html>
